# ProjectPracticeGame

./: .gitignore  Alphabet.h  CMakeCache.txt  CMakeLists.txt  Config.h  ErrorPlace.h  Game.cpp  Game.h  GameOverScreen.h  GameState.h  Globals.h  Inventory.h  Makefile  Menu.h  PhysicalBlocks.cpp  PlayField.h  Player.h  README.md  Sound.h  cmake_install.cmake  main.cpp
assets/: letters.cpp
common/: Entity.h  Image.cpp  Image.h  PixelImage.cpp  types.h
component/: components.h
entity/Cursor/: Cursor.cpp  Cursor.h
entity/Letter/: Letter.cpp  Letter.h
input/: 1.c  3.c  4.cpp  multiplicationTable.cpp  test.cpp
src/: Ball.cpp  Ball.h  Cursor.h  Game.cpp  Game.h  PlayField.h
src/common/: Entity.h
system/: EventSystem.h
util/: Button.h  Compilation.h  EventManager.h  IO.h  Image.h
